# beansync

./: .gitignore  README.md  config.yaml.example  flake.nix  main.bean.example  pyproject.toml  repository.yaml
.github/workflows/: build-addon.yaml
addon/: Dockerfile  config.yaml  run.sh
beancountio/: __init__.py  __main__.py  cli.py  config.py  llm.py  secrets.py  sync_cua.py  sync_email.py  sync_stagehand.py
beancountio/ui/: app.py  source_viewer.py  transaction_editor.py
beancountio/ui/pages/: config_editor.py  dashboard.py  ingest.py  notes.py
beansync/: __init__.py  __main__.py  agent_tools.py  cli.py  config.py  git_ops.py  llm.py  mcp_server.py  notes.py  questions.py  scheduler.py  secrets.py  sync_cua.py  sync_email.py  sync_stagehand.py
beansync/ui/: app.py  source_viewer.py  transaction_editor.py  urls.py
beansync/ui/pages/: chat.py  config_editor.py  dashboard.py  ingest.py  questions.py
scripts/: test_addon_image.sh  test_ingress.py
