[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "beansync"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "litellm",
    "loguru",
    "mcp>=1.28",
    "nicegui",
    "pydantic",
    "pyyaml",
    "questionary",
    "plotly",
    "requests",
    "typer",
    "nh3>=0.3.5",
    "beancount>=3",
    "beanquery",
    "croniter>=6.2.4",
    "playwright>=1.61.0",
    "playwright-stealth>=2.0.3",
]

[project.scripts]
bean-sync = "beansync.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["beansync*"]
